--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,17 +5,21 @@ on:
   pull_request:
 
 jobs:
-  rust-test:
+  python-test:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install Rust toolchain
-        uses: dtolnay/rust-toolchain@stable
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
 
-      - name: Cache cargo registry + target
-        uses: Swatinem/rust-cache@v2
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
       - name: Run tests
-        run: cargo test --all-targets --all-features
+        run: pytest
